--- a/css/index.css
+++ b/css/index.css
@@ -163,31 +163,37 @@ a {
   text-decoration: none;
 }
 
+.text-container {
+  font-weight: 700;
+}
+
 /* header styling */
 header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 21px 0 0px 0;
-  align-items: center;
-  padding-bottom: 25px;
+  margin: 20px 0;
+  align-items: baseline;
+  /* padding-bottom: 25px; */
+}
+
+header.logo {
+  width: 20%;
 }
 
 nav {
   display: flex;
-  padding-top: 24px;
-  padding-bottom: 38px;
+  margin: 0 0 39px 0;
+  width: 80%;
+  justify-content: space-around;
 }
 
 nav a {
-  padding-right: 60px;
+  /* padding-right: 60px; */
   font-size: 0.9rem;
   font-weight: 700;
 }
 
-.logo {
-  padding-bottom: 38px;
-}
 /* end header styling */
 
 /* top-content styling */
@@ -324,7 +330,7 @@ footer nav a {
 
 .header-about-text {
   font-weight: 600;
-  padding-top: 24px;
+  padding: 24px;
   padding-left: 20px;
   line-height: 20px;
 }
