final submission after css revisions. mvp.

--- a/css/index.css
+++ b/css/index.css
@@ -341,70 +341,75 @@ footer nav a {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  text-align: center;
+  justify-content: space-between;
   padding-left: 15px;
   font-weight: 700;
 }
 
 .about-plan {
-  text-align: left;
-  width: 50%;
+  width: 48%;
+  padding-bottom: 30px;
+  border-bottom: dashed 1px black;
+  margin-bottom: 60px;
 }
 
-.about-plan:after {
+/* .about-plan:after {
   content: '';
   display: block;
   margin: 14 auto;
   width: 96%;
   padding-top: 35px;
   border-bottom: dashed 1px black;
-}
+} */
 
 .about-working {
-  text-align: left;
-  width: 50%;
-  /* border-bottom: dashed 1px black; */
+  width: 48%;
+  border-bottom: dashed 1px black;
   padding-bottom: 30px;
+  padding-right: 25px;
+  margin-bottom: 60px;
 }
 
-.about-working:after {
+/* .about-working:after {
   content: '';
   display: block;
   margin: 14 auto;
   width: 98%;
   padding-top: 35px;
   border-bottom: dashed 1px black;
-}
+} */
 
 .about-office {
-  padding-top: 25px;
-  text-align: left;
-  width: 50%;
+  width: 48%;
+  border-bottom: dashed 1px black;
+  padding-bottom: 30px;
+  padding-right: 25px;
 }
 
-.about-office:after {
+/* .about-office:after {
   content: '';
   display: block;
   margin: 14 auto;
   width: 96%;
   padding-top: 35px;
   border-bottom: dashed 1px black;
-}
+} */
 
 .about-meeting {
-  padding-top: 25px;
-  text-align: left;
-  width: 50%;
+  width: 48%;
+  border-bottom: dashed 1px black;
+  padding-bottom: 30px;
+  padding-right: 25px;
 }
 
-.about-meeting:after {
+/* .about-meeting:after {
   content: '';
   display: block;
   margin: 14 auto;
   width: 98%;
   padding-top: 35px;
   border-bottom: dashed 1px black;
-}
+} */
 
 #main-content img {
   padding-bottom: 15px;
@@ -413,7 +418,7 @@ footer nav a {
 #main-content a {
   border: 2px solid black;
   border-radius: 8px;
-  padding: 10px 25px;
+  padding: 8px 22px;
   margin-bottom: 25px;
 }
 
