more css revision. need to pay more attention.

--- a/css/index.css
+++ b/css/index.css
@@ -189,9 +189,21 @@ nav {
 }
 
 nav a {
-  /* padding-right: 60px; */
+  padding-right: 60px;
   font-size: 0.9rem;
   font-weight: 700;
+  display: inline-block;
+  vertical-align: middle;
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  transition-duration: 0.3s;
+  transition-property: transform;
+}
+
+nav a:hover {
+  transform: scale(1.1);
 }
 
 /* end header styling */
