--- a/css/index.css
+++ b/css/index.css
@@ -185,11 +185,11 @@ nav {
   display: flex;
   margin: 0 0 39px 0;
   width: 80%;
+  padding-left: 15px;
   justify-content: space-around;
 }
 
 nav a {
-  padding-right: 60px;
   font-size: 0.9rem;
   font-weight: 700;
   display: inline-block;
